[gd_scene load_steps=22 format=3 uid="uid://dicn5pby0flga"]

[ext_resource type="Texture2D" uid="uid://bb6xt2qpwi17" path="res://assets/ship.png" id="1_5ysne"]
[ext_resource type="Script" path="res://player_ship/ship.gd" id="1_v4f13"]
[ext_resource type="Script" path="res://components/move.gd" id="2_cuigx"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="3_guequ"]
[ext_resource type="Resource" uid="uid://c16pij85y5h0d" path="res://player_ship/ship_move_stats.tres" id="4_bytnx"]
[ext_resource type="Script" path="res://components/position_clamp_component.gd" id="5_ubxrt"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="7_3iqlc"]
[ext_resource type="PackedScene" uid="uid://jpih4nqy4sxn" path="res://projectiles/laser.tscn" id="8_r1vyc"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="9_egrdg"]
[ext_resource type="Texture2D" uid="uid://b8a6mburakp0p" path="res://assets/ship_flame.png" id="10_bmp28"]

[sub_resource type="AtlasTexture" id="AtlasTexture_odkwv"]
atlas = ExtResource("10_bmp28")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hunym"]
atlas = ExtResource("10_bmp28")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_10xeh"]
atlas = ExtResource("10_bmp28")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_thbe1"]
atlas = ExtResource("10_bmp28")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb03r"]
atlas = ExtResource("10_bmp28")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7ohw"]
atlas = ExtResource("10_bmp28")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6o7v2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_odkwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hunym")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_10xeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thbe1")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb03r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7ohw")
}],
"loop": true,
"name": &"center",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ensvd"]
atlas = ExtResource("1_5ysne")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewpis"]
atlas = ExtResource("1_5ysne")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_txpr7"]
atlas = ExtResource("1_5ysne")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_q3p24"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ensvd")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewpis")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_txpr7")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}]

[node name="Ship" type="Node2D"]
script = ExtResource("1_v4f13")

[node name="Anchor" type="Node2D" parent="."]

[node name="FlameAnimatedSprite" type="AnimatedSprite2D" parent="Anchor"]
position = Vector2(0, 16)
sprite_frames = SubResource("SpriteFrames_6o7v2")
animation = &"bank_right"
autoplay = "center"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Anchor"]
sprite_frames = SubResource("SpriteFrames_q3p24")
animation = &"center"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_cuigx")
actor = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_guequ")
move_stats = ExtResource("4_bytnx")
move_component = NodePath("../MoveComponent")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_ubxrt")
actor = NodePath("..")

[node name="LeftMuzzle" type="Marker2D" parent="."]
position = Vector2(-5, -4)

[node name="RightMuzzle" type="Marker2D" parent="."]
position = Vector2(5, -4)

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_3iqlc")
scene = ExtResource("8_r1vyc")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="ScaleComponent" type="Node" parent="FireRateTimer" node_paths=PackedStringArray("sprite")]
script = ExtResource("9_egrdg")
sprite = NodePath("../../Anchor")
